WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201456
[iPadOS] Unable to change sheets on Airtable.com
https://bugs.webkit.org/show_bug.cgi?id=201456
Summary
[iPadOS] Unable to change sheets on Airtable.com
Antoine Quint
Reported
2019-09-04 05:59:04 PDT
[iPadOS] Unable to change sheets on Airtable.com
Attachments
Patch
(2.25 KB, patch)
2019-09-04 06:01 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2019-09-04 06:01:15 PDT
Created
attachment 377974
[details]
Patch
Antoine Quint
Comment 2
2019-09-04 06:01:20 PDT
<
rdar://problem/51557377
>
WebKit Commit Bot
Comment 3
2019-09-04 12:38:43 PDT
Comment on
attachment 377974
[details]
Patch Clearing flags on attachment: 377974 Committed
r249493
: <
https://trac.webkit.org/changeset/249493
>
WebKit Commit Bot
Comment 4
2019-09-04 12:38:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug