[iPadOS] Unable to change sheets on Airtable.com https://bugs.webkit.org/show_bug.cgi?id=201456 <rdar://problem/51557377>

Patch by Antoine Quint <graouts@apple.com> on 2019-09-04
Reviewed by Dean Jackson.

Simulated mouse events are required to be able to manipulate cells and and columns on Airtable.com. However, dispatching a "mousedown" event on
tabs allowing to pick a different sheet ends up calling preventDefault() and prevent "click" events from being dispatched, which makes it
impossible to change sheet. We now limit the dispatch of simulated mouse events to the grid.

* page/Quirks.cpp:
(WebCore::Quirks::simulatedMouseEventTypeForTarget const):

Canonical link: https://commits.webkit.org/215102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249493 268f45cc-cd09-0410-ab3c-d52691b4dbfc